tests/baselines/reference/computedPropertyNames27_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
computedPropertyNames27_ES5.ts(4,7): error TS2466: 'super' cannot be referenced in a computed property name.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== computedPropertyNames27_ES5.ts (1 errors) ====
    class Base {
    }
    class C extends Base {
        [(super(), "prop")]() { }
          ~~~~~
!!! error TS2466: 'super' cannot be referenced in a computed property name.
    }